--- a/main/index.html
+++ b/main/index.html
@@ -76,7 +76,7 @@
 					Étudiant à l&rsquo;EPITA ? La certification de votre compte Discord prend moins de 2min !
 				</h5>
 				<h5 class="h5-2-style mg-clear">
-					<span class="fa fa-star"></span><span>&nbsp;Connectez-vous sur Discord et rejoignez serveur Discord partenaire.</span>
+					<span class="fa fa-star"></span><span>&nbsp;Connectez-vous sur Discord et rejoignez un serveur Discord partenaire.</span>
 				</h5>
 				<h5 class="h5-2-style mg-sm">
 					<span class="fa fa-star"></span>&nbsp;Vous recevrez un message automatique avec une procédure à suivre utilisant votre compte étudiant Office 365®.
@@ -89,7 +89,7 @@
 					</iframe>
 				</div>
 				<h6 class="mg-md h6-2-style text-lg-center">
-					Étant soucieux du respect de la vie privée et en conformité avec la loi RGPD, vous pouvez nous contacter afin d&rsquo;obtenir une copie de vos données. &nbsp;Les données comme votre prénom, nom, mail ou photo proviennent de la base publique du CRI.
+					Étant soucieux du respect de la vie privée et en conformité avec la loi RGPD, vous pouvez nous contacter afin d&rsquo;obtenir une copie de vos données.
 				</h6>
 			</div>
 		</div>
