--- a/main/index.html
+++ b/main/index.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css?7412">
-	<link rel="stylesheet" type="text/css" href="style.css?1956">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Oleo+Script&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     
-	<script src="./js/jquery.js?1435"></script>
-	<script src="./js/bootstrapbundle.js?6065"></script>
-	<script src="./js/config.js?1872"></script>
+	<script src="./js/jquery.js"></script>
+	<script src="./js/bootstrapbundle.js"></script>
+	<script src="./js/config.js"></script>
 	<script src="./js/lazysizes.js" defer></script>
     <title>EpiLogin | Solution de gestion de serveur Discord</title>
 </head>
